# cheapskate-ci

./: Cargo.toml  README.md  cheapskate-ci.toml
.github/: dependabot.yml
.github/workflows/: auto-merge.yml  ci.yml
src/: cli.rs  config_file.rs  git.rs  github.rs  main.rs  step.rs  step_runner.rs
