[package]
name = "cheapskate-ci"
edition = "2018"
version = "0.1.7"
authors = ["Max Jacobson <max@hardscrabble.net>"]
readme = "README.md"
description = "CLI for those who are too cheap to pay for CI but still want required GitHub status checks. Now they can run this locally."
license = "MIT"
repository = "https://github.com/maxjacobson/cheapskate-ci"
keywords = ["ci"]

[dependencies]
clap = "4.2.4"
env_logger = "0.10.0"
log = "0.4.17"
psst = "0.1"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.27.0", features = ["full"] }
toml = "0.7"
