[package]
name = "cheapskate-ci"
edition = "2018"
version = "0.1.8"
authors = ["Max Jacobson <max@hardscrabble.net>"]
readme = "README.md"
description = "CLI for those who are too cheap to pay for CI but still want required GitHub status checks. Now they can run this locally."
license = "MIT"
repository = "https://github.com/maxjacobson/cheapskate-ci"
keywords = ["ci"]

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
env_logger = "0.10.2"
log = "0.4.26"
psst = "0.1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.44.0", features = ["full"] }
toml = "0.8"
